<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, Table_managementActivity!</string>
    <string name="app_name">教务管理掌中宝</string>
    <string name="welcome_name">欢迎使用，请先登录</string>
    <string name="accountName">用户名</string>
    <string name="accountPassword">密码</string>
    <string name="remember_password">记住密码</string>
    <string name="auto_login">自动登录</string>
    <string name="user_login">登录</string>
    <string name="user_reset">退出</string>
    <string name="student">学生</string>
    <string name="teacher">教师</string>
    <string name="ref1">请输入账号</string>
    <string name="ref2">请输入密码</string>
    <string name="exit">退出</string>
    <string name="about">关于</string>
    <string name="student_main_table">学生主界面</string>
    <string name="teacher_main_table">教师主界面</string>
    <string name="exam_information">考试安排</string>
    <string name="exam_information_in_detail">考试详细信息</string>
    <string name="Search_By_School_year">按学年查询</string>
    <string name="Search_By_Semester">按学期查询</string>
    <string name="Search_By_All_scores">查所有成绩</string>
    <string name="Mark_infomation">考试成绩</string>
    <string name="Mark_information_in_detail">成绩详细信息</string>
    <string name="grademark">等级成绩</string>
    <string name="grademark_detail">等级成绩详细信息</string>
    <string name="classroom_using">已选课程</string>
    <string name="school_info">校园资讯</string>
    <string name="table_search">课表查询</string>
    <string name="check">选课情况</string>
    <string name="kb_in_detail">课表详细信息</string>
</resources>