<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/blueground" >

   <LinearLayout
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal" >

  <TextView
        android:id="@+id/degreeLabel1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="请选择查询的学年" 
        android:textSize="6pt"
        android:layout_marginLeft="15dp"/>
  
   <TextView
        android:id="@+id/degreeLabel2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="请选择查询的学期" 
        android:textSize="6pt"
        android:layout_marginLeft="65dp"/>
    </LinearLayout>  
     
  <LinearLayout
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal" >

      <Spinner
          android:id="@+id/xuenian"
          android:layout_width="138dp"
          android:layout_height="wrap_content"
          android:layout_marginLeft="15dp"
          android:layout_marginRight="10dp"
          android:layout_weight="0.18" />

      <Spinner
          android:id="@+id/xueqi"
          android:layout_width="120dp"
          android:layout_height="match_parent"
          android:layout_marginLeft="10dp"
          android:layout_marginRight="15dp" />
  </LinearLayout>
        
  <LinearLayout
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:gravity="center_horizontal"
      android:orientation="horizontal"
      android:paddingTop="6dp" >
              
      <Button
          android:id="@+id/School_year"
          android:layout_width="wrap_content"
          android:layout_height="fill_parent"
          android:layout_margin="3dp"
          android:onClick="onClick_SingleChoiceDialog1"
          android:text="@string/Search_By_School_year"
          android:layout_weight="1" />   
      <Button
          android:id="@+id/Semester"
          android:layout_width="wrap_content"
          android:layout_height="fill_parent"
          android:layout_margin="3dp"
          android:onClick="onClick_SingleChoiceDialog2"
          android:text="@string/Search_By_Semester"
          android:layout_weight="1"  />
      <Button
          android:id="@+id/All_scores"
          android:layout_width="wrap_content"
          android:layout_height="fill_parent"
          android:layout_margin="3dp"
          android:text="@string/Search_By_All_scores" 
          android:layout_weight="1" />
  </LinearLayout>
  
<ListView
    android:id="@+id/marklist"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:divider="#fff"
    android:dividerHeight="1dp"
    android:drawSelectorOnTop="false"
    android:cacheColorHint="#00000000"
    android:scrollbars="vertical"
    android:visibility="visible" >
</ListView>
</LinearLayout>
